; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_multi_adv.c_btm_ble_map_adv_tx_power.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_multi_adv.c_btm_ble_map_adv_tx_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTM_BLE_ADV_TX_POWER_MAX = common dso_local global i32 0, align 4
@btm_ble_tx_power = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @btm_ble_map_adv_tx_power(i32 %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp sle i32 0, %4
  br i1 %5, label %6, label %17

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @BTM_BLE_ADV_TX_POWER_MAX, align 4
  %9 = icmp sle i32 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %6
  %11 = load i64*, i64** @btm_ble_tx_power, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i64, i64* %11, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = trunc i64 %15 to i8
  store i8 %16, i8* %2, align 1
  br label %18

17:                                               ; preds = %6, %1
  store i8 0, i8* %2, align 1
  br label %18

18:                                               ; preds = %17, %10
  %19 = load i8, i8* %2, align 1
  ret i8 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
